configurations/applications/python-sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-sample
  labels:
    app: python-sample
spec:
  selector:
    matchLabels:
      app: python-sample
  replicas: 1
  template:
    metadata:
      labels:
        app: python-sample
    spec:
      imagePullSecrets:
        - name: quay-credentials
      containers:
        - name: python-sample
          image: python-sample:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 8080
