configurations/applications/python-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-sample
spec:
  selector:
    app: python-sample
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
