configurations/applications/python-sample/el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: python-sample
    eventlistener: python-sample
  name: el-python-sample
spec:
  port:
    targetPort: http-listener
  tls:
    termination: edge
  to:
    kind: Service
    name: el-python-sample
