configurations/applications/python-sample/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python-sample
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: python-sample
